squashing bugs, tooltip stuff, better drag and dropping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -131,7 +131,7 @@ md-progress-circular {
   overflow: visible;
 }
 
-.groupControls {
+#groupControls {
   display: none;
   border-left: 1px solid #C5C5C5;
   border-bottom: 1px solid #C5C5C5;
@@ -140,7 +140,7 @@ md-progress-circular {
   border-radius: 0 0 5px 5px;
 }
 
-.groupControls.on {
+#groupControls.on {
   width: 300px;
   top: 48px;
   left: -5px;
@@ -210,7 +210,7 @@ md-icon.menu {
 }
 
 .addButton .group-add:hover {
-  color: darken(#333333, 20%) !important;
+  color: darken(#333333, 5%) !important;
 }
 
 .removeButton {
@@ -267,7 +267,7 @@ md-toolbar {
 }
 
 .close:hover {
-  color: darken(#333333, 20%) !important;
+  color: darken(#333333, 5%) !important;
 }
 
 .close:hover {
@@ -442,6 +442,7 @@ md-toolbar {
   height: 333px;
   margin: 10px auto 0 auto;
   border-radius: 5px;
+  transition: 0.1s all ease-in-out;
   #dragHere {
     position: absolute;
     top: 41%;
@@ -455,6 +456,15 @@ md-toolbar {
     font-size: 100px;
     opacity: 0.5;
   }
+}
+
+#playListArea.dragHereHighlight {
+  background-color: white;
+  border: 5px dotted #5383ff;
+}
+#playListArea.draggingOver {
+  background-color: darken(white, 5%);
+  box-shadow: inset 0 0 20px 0 rgba(0,0,0,1);
 }
 
 #fileInput {
@@ -509,7 +519,7 @@ md-toolbar {
 
 .beatOption {
   display: inline-block;
-  margin-left: 0.714em;
+  margin-right: 2em;
 }
 
 #playerBottom {
@@ -534,15 +544,23 @@ md-toolbar {
   background-image: url('images/speaker-outer.png');
   width: 284px;
   height: 283px;
-}
-
-#beatSpeakerCenter {
-  width: 188px;
-  height: 186px;
-  background-image: url('images/speaker-inner.png');
-  position: absolute;
-  top: 16%;
-  left: 18%;
+  #beatSpeakerCenter {
+    width: 188px;
+    height: 186px;
+    background-image: url('images/speaker-inner.png');
+    position: absolute;
+    top: 16%;
+    left: 18%;
+  }
+  #beatSpeakerCenterBackground {
+    width: 188px;
+    height: 186px;
+    background-color: black;
+    position: absolute;
+    top: 16%;
+    left: 18%;
+    z-index: -1;
+  }
 }
 
 .pop {
@@ -584,14 +602,4 @@ md-toolbar {
   overflow: auto;
   padding: 10px;
   box-shadow: 5px 10px 15px 5px rgba(0, 0, 0, 0.1);
-}
-
-#playListArea.dragArea.dragHereHighlight {
-  background-color: white;
-  border: 5px dotted #5383ff;
-}
-
-#playListArea.dragArea.draggingOver {
-  background-color: darken(white, 5%);
-  box-shadow: inset 0 0 20px 0 rgba(0,0,0,1);
 }
